--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,9 @@ body {
   .inner-silver {
     box-shadow: inset 0 0 0 1px theme(colors.Silver);
   }
+  .inner-gray-orange {
+    box-shadow: inset 0 0 0 1px theme(colors.Gray_Orange);
+  }
   .inner-none {
     box-shadow: none;
   }
