--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,7 @@ body {
   .item-border:not(:last-child)::after {
     content: "";
     position: absolute;
+    left: 0;
     bottom: calc(9px / -2 - 0.5px);
     width: 100%;
     height: 1px;
